src/objects/ZDocument_Setup__c.object
<CustomObject>
    <fields>
        <fullName>ActualColumn_Name__c</fullName>
        <description>Storing Stages from zStack object</description>
        <label>Actual Column Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred_Column__c</fullName>
        <inlineHelpText>Actual Column Names</inlineHelpText>
        <label>Referred Column</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Indexed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Type</fullName>
                </value>
                <value>
                    <fullName>Updated Date</fullName>
                </value>
                <value>
                    <fullName>Form</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_DocType__c</fullName>
        <label>Referred DocType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HDOT</fullName>
                </value>
                <value>
                    <fullName>3500</fullName>
                </value>
                <value>
                    <fullName>DOSE</fullName>
                </value>
                <value>
                    <fullName>ENRLC</fullName>
                </value>
                <value>
                    <fullName>PIRM</fullName>
                </value>
                <value>
                    <fullName>REFR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZDocument_DesignLayout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZDocument Design Layout</label>
        <referenceTo>ZDocument_DesignLayout__c</referenceTo>
        <relationshipLabel>ZDocument Setup</relationshipLabel>
        <relationshipName>ZDocument_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ZDocument Setup</label>
    <nameField>
        <label>ZDocument Column/DocType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZDocument Setup</pluralLabel>
    <recordTypes>
        <fullName>zDocument_Columns</fullName>
        <active>true</active>
        <label>zDocument Columns</label>
    </recordTypes>
    <recordTypes>
        <fullName>zDocument_Types</fullName>
        <active>true</active>
        <label>zDocument Types</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>